# cinesignal

./: .gitignore  LICENSE  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/components/: __init__.py  data.py  ui.py
app/views/: __init__.py  methodology.py  overview.py  profitability.py
data/processed/: movies_clean.parquet
docs/: data_dictionary.md  decisions.md  methodology.md
notebooks/: 01_eda.ipynb
pipeline/: __init__.py  acquire.py  etl.py
tests/: test_app_smoke.py  test_transforms.py
